# smartwatch_app_fw_v1

./: nrf.py
smartwatch_all_sensors/: CMakeLists.txt  prj.conf
smartwatch_all_sensors/boards/: nrf52840dk_nrf52840.overlay
smartwatch_all_sensors/build_1/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  compile_commands.json
smartwatch_all_sensors/build_10/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  compile_commands.json
smartwatch_all_sensors/build_11/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  compile_commands.json
smartwatch_all_sensors/build_12/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  compile_commands.json
smartwatch_all_sensors/build_13/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  compile_commands.json
smartwatch_all_sensors/build_2/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  compile_commands.json
smartwatch_all_sensors/build_3/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  compile_commands.json
(+778 files in other folders)
